@@ -3,7 +3,6 @@ Makefile.PL
 bin/xgettext-perl
 lib/Log/Report/Extract.pm
 lib/Log/Report/Extract/PerlPPI.pm
-lib/Log/Report/Extract/Template.pm
 lib/Log/Report/Lexicon.pm
 lib/Log/Report/Lexicon/Index.pm
 lib/Log/Report/Lexicon/MOTcompact.pm
@@ -27,7 +26,6 @@ t/21pot_modif.t
 t/22compact.t
 t/30index.t
 t/40ppi.t
-t/41templ.t
 t/hello-world-slovak.po
 t/simplecal/README
 t/simplecal/ar.po
